add texte search

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@200&display=swap" rel="stylesheet" />
     <!-- fin  police pour appli -->
+
+    <script
+      type="text/javascript"
+      src="//maps.googleapis.com/maps/api/js?key=AIzaSyAURsom7c-jmbNERN0wVqb4OzVten2Hy24&language=en&libraries=places"
+    ></script>
   </head>
   <body>
     <noscript> You need JavaScript to run this ! </noscript>
